--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -10,19 +10,13 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand topnav" href="#">Start Bootstrap</a>
+              <a class="navbar-brand topnav" href="#">CU Later</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                   <li>
-                      <a href="#about">About</a>
-                  </li>
-                  <li>
-                      <a href="#services">Services</a>
-                  </li>
-                  <li>
-                      <a href="#contact">Contact</a>
+                      <a href="#contact">Login</a>
                   </li>
               </ul>
           </div>
