Added login capability with Google accounts that only allows cornell.edu domains

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,3 +1,5 @@
 <template name='home'>
   <h1>Hello <small>World</small></h1>
+  <a id="login" href="">Login</a>
+  <a id="logout" href="">Logout</a>
 </template>
