--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -6,22 +6,14 @@
               <div class="col-lg-12">
                   <ul class="list-inline">
                       <li>
-                          <a href="#">Home</a>
+                          <a href="/">Home</a>
                       </li>
                       <li class="footer-menu-divider">&sdot;</li>
                       <li>
-                          <a href="#about">About</a>
-                      </li>
-                      <li class="footer-menu-divider">&sdot;</li>
-                      <li>
-                          <a href="#services">Services</a>
-                      </li>
-                      <li class="footer-menu-divider">&sdot;</li>
-                      <li>
-                          <a href="#contact">Contact</a>
+                          <a href="/contact">Contact</a>
                       </li>
                   </ul>
-                  <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                  <p class="copyright text-muted small">Made at BigRed//Hacks 2015</p>
               </div>
           </div>
       </div>
