Changed login background

--- a/client/css/home.scss
+++ b/client/css/home.scss
@@ -14,7 +14,7 @@
 }
 
 .intro-header {
-  background: url(http://fillmurray.com/2000/2000) no-repeat center center;
+  background: url(http://lorempixel.com/1920/1920/city/1) no-repeat center center;
 }
 
 .topnav {
