--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -34,7 +34,12 @@
 
         </div>
         <!-- /.container -->
-
+    <div class="container">
+      <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+    	  MODAL, YAY!
+    	</button>
+    </div>
     </div>
     <!-- /.content-section-a -->
+    {{> modal}}
 </template>
