--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -13,20 +13,20 @@
                 <div class="col-lg-4 col-sm-12">
                   <ul class="list-group">
                     <li class="list-group-item">
-                      <span class="badge"><a href="">3 mi</a></span>
-                      CHEM 2090 Study Group
+                      <span class="badge">3 mi</span>
+                      <a href="">CHEM 2090 Study Group</a>
                     </li>
                     <li class="list-group-item">
-                      <span class="badge"><a href="">1 mi</a></span>
-                      Smash Party
+                      <span class="badge">1 mi</span>
+                      <a href="">Smash Party</a>
                     </li>
                     <li class="list-group-item">
-                      <span class="badge"><a href="">0.5 mi</a></span>
-                      Big Red Hacks
+                      <span class="badge">0.5 mi</span>
+                      <a href="">Big Red Hacks</a>
                     </li>
                     <li class="list-group-item">
-                      <span class="badge"><a href="">4 mi</a></span>
-                      A Cappella Tryouts
+                      <span class="badge">4 mi</span>
+                      <a href="">A Cappella Tryouts</a>
                     </li>
                   </ul>
                 </div>
