--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -8,7 +8,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
-                  <div id="map"></div>
+                  <div id="map">
+                  	{{> googleMap name="map" options=mapOptions}}
+                  </div>
                 </div>
                 <div class="col-lg-4 col-sm-12">
                   <ul class="list-group">
