--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -16,19 +16,19 @@
                   <ul class="list-group">
                     <li class="list-group-item">
                       <span class="badge">3 mi</span>
-                      <a href="">CHEM 2090 Study Group</a>
+                      <a href="" data-toggle="modal" data-target="#myModal">CHEM 2090 Study Group</a>
                     </li>
                     <li class="list-group-item">
                       <span class="badge">1 mi</span>
-                      <a href="">Smash Party</a>
+                      <a href="" data-toggle="modal" data-target="#myModal">Smash Party</a>
                     </li>
                     <li class="list-group-item">
                       <span class="badge">0.5 mi</span>
-                      <a href="">Big Red Hacks</a>
+                      <a href="" data-toggle="modal" data-target="#myModal">Big Red Hacks</a>
                     </li>
                     <li class="list-group-item">
                       <span class="badge">4 mi</span>
-                      <a href="">A Cappella Tryouts</a>
+                      <a href="" data-toggle="modal" data-target="#myModal">A Cappella Tryouts</a>
                     </li>
                   </ul>
                 </div>
@@ -36,11 +36,6 @@
 
         </div>
         <!-- /.container -->
-    <div class="container">
-      <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-    	  MODAL, YAY!
-    	</button>
-    </div>
     </div>
     <!-- /.content-section-a -->
     <!-- Modal -->
@@ -56,21 +51,15 @@
             <div class="info">
               <div id="time"><span id="info-name"><span class="glyphicon glyphicon-time" aria-hidden="true"></span> Time: </span><span id="info-data">{{time}}</span></div>
               <div id="place"><span id="info-name"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Place: </span><span id="info-data">{{place}}</span></div>
-              <div id="info-description"><span id="info-name">Description</span><br>
+              <div id="info-description"><span id="info-name">Description:</span><br>
               <span id="info-data">
                 {{description}}
               </span></div>
-
-              Who else is going?
-              <ul>
-                {{#each users}}
-                <li>{{user}}</li>
-                {{/each}}
-            </ul>
+              <br>
+              {{users_count}} other people are going!
             </div>
           {{/with}}
           </div>
-
           <div class="modal-footer">
             JOIN?
             <button type="button" class="btn btn-primary">YES</button>
