--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -30,15 +30,15 @@
           </div>
           <!-- /.navbar-collapse -->
 
-          <div id="login-failure" class="bs-component" style="display:none;">
+      </div>
+      <!-- /.container -->
+
+      <div id="login-failure" class="bs-component">
         <div class="alert alert-dismissable alert-danger">
           <button type="button" class="close" data-dismiss="alert">&times;</button>
           <p>Please use a valid email address in the form of [netid]@cornell.edu!.</p>
         </div>
       </div>
-
-      </div>
-      <!-- /.container -->
 
   </nav>
 </template>
