Allowed for the creation of events in the database

--- a/client/templates/eventForm.html
+++ b/client/templates/eventForm.html
@@ -10,15 +10,19 @@
         <div class="modal-body">
           <form>
             <div class="form-group">
-              <label for="eventName">Email address</label>
+              <label for="eventName">Event Name</label>
               <input type="text" class="form-control" id="eventName" placeholder="E.g. Big Red Hacks">
             </div>
             <div class="form-group">
-              <label for="eventLocation">Password</label>
+              <label for="eventDescription">Event Description</label>
+              <input type="text" class="form-control" id="eventDescription" placeholder="Enter a short description of your event">
+            </div>
+            <div class="form-group">
+              <label for="eventLocation">Location</label>
               <input type="text" class="form-control" id="eventLocation" placeholder="E.g. Physical Science Building">
             </div>
             <div class="form-group">
-              <label for="eventTime">File input</label>
+              <label for="eventTime">Date and Time</label>
               <input type="datetime-local" id="eventTime">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
