--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -15,6 +15,12 @@
                 </div>
                 <div class="col-lg-4 col-sm-12">
                   <ul class="list-group">
+                    {{#each events}}
+                      <li class="list-group-item">
+                        <span class="badge">3 mi</span>
+                        <a href="">{{this.name}}</a>
+                      </li>
+                    {{/each}}
                     <li class="list-group-item">
                       <span class="badge">3 mi</span>
                       <a href="">CHEM 2090 Study Group</a>
