Fixed errors and moved edit and delete for events

--- a/client/css/home.scss
+++ b/client/css/home.scss
@@ -39,3 +39,10 @@
 #info-data {
   color: #54545c;
 }
+
+#delete-event, #edit-event {
+  font-size: 0.7em;
+  color: red;
+  margin-left: 20px;
+  float: right;
+}
