--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -22,15 +22,20 @@
                       <div class="panel panel-default">
                       <div class="panel-heading" role="tab" id="headingOne">
                         <h4 class="panel-title">
-                          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            {{this.name}}
-                            <span class="badge" style="float:right">3 mi</span>
+                          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{_id}}" aria-expanded="true" aria-controls="#{{_id}}">
+                            <span class="eventTitle">{{name}}</span>
+                            <span class="badge" style="float:right">2 Hours</span>
                           </a>
                         </h4>
                       </div>
-                      <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                      <div id="{{_id}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="#{{_id}}">
                         <div class="panel-body">
-                          {{this.description}}
+                          {{time}}
+                          {{description}}
+                          {{#if myEvent this._id}}
+                              <span class="editEvent"><a id="edit-event">Edit</a></span>
+                              <span class="deleteEvent"><a id="delete-event">Delete</a></span>
+                            {{/if}}
                         </div>
                       </div>
                     </div>
