Add Cornell logo to footer

--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -16,6 +16,7 @@
                   <p class="copyright text-muted small">Made at BigRed//Hacks 2015</p>
               </div>
           </div>
+          <img src="assets/cornell_logo.gif" width="128" height="128" align="right">
       </div>
   </footer>
 </template>
