--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -22,20 +22,20 @@
                       <div class="panel panel-default">
                       <div class="panel-heading" role="tab" id="headingOne">
                         <h4 class="panel-title">
-                          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{_id}}" aria-expanded="true" aria-controls="#{{_id}}">
+                          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{_id}}" aria-expanded="false" aria-controls="#{{_id}}">
                             <span class="eventTitle">{{name}}</span>
                             <span class="badge" style="float:right">2 Hours</span>
                           </a>
                         </h4>
                       </div>
-                      <div id="{{_id}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="#{{_id}}">
+                      <div id="{{_id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="#{{_id}}">
                         <div class="panel-body">
                           {{time}}
                           {{description}}
-                          {{#if myEvent this._id}}
-                              <span class="editEvent"><a id="edit-event">Edit</a></span>
-                              <span class="deleteEvent"><a id="delete-event">Delete</a></span>
-                            {{/if}}
+                          {{#if myEvent _id}}
+                            <a id="edit-event" data-eventid="{{_id}}">Edit</a>
+                            <a id="delete-event" data-eventid="{{_id}}">Delete</a>
+                          {{/if}}
                         </div>
                       </div>
                     </div>
