Added 'Are you sure?' to delete.

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -40,18 +40,9 @@
                       </div>
                     </div>
                     {{/each}}
-
-
-
-
                   </div>
-
                 </div>
-
-
-
             </div>
-
         </div>
         <!-- /.container -->
     </div>
@@ -59,5 +50,6 @@
 
 
     {{> eventForm}}
+    {{> dialogModal}}
 
 </template>
