Added freaking autocomplete thingy

--- a/client/templates/eventForm.html
+++ b/client/templates/eventForm.html
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
               <label for="eventLocation">Location</label>
-              <input type="text" class="form-control" id="eventLocation" placeholder="E.g. Physical Science Building">
+              <input type='text' class="form-control" id="eventLocation" placeholder="E.g. Physical Science Building">
             </div>
             <div class="form-group">
               <label for="eventTime">Date and Time</label>
