--- a/client/templates/eventForm.html
+++ b/client/templates/eventForm.html
@@ -8,9 +8,17 @@
           <h4 class="modal-title" id="myModalLabel">New Event</h4>
         </div>
         <div class="modal-body">
-          <form>
+          <div id="error-messages" class="bs-component" style="display:none;">
+            <div class="alert alert-dismissable alert-danger">
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <h4>Error!</h4>
+              <p>Please make sure all of the dates you used are valid, and all of the required fields are filled in.</p>
+            </div>
+          </div>
+          <form class="add-event">
+          
             <div class="form-group">
-              <label for="eventName">Event Name</label>
+              <label for="eventName">Event Name*</label>
               <input type="text" class="form-control" id="eventName" placeholder="E.g. Big Red Hacks">
             </div>
             <div class="form-group">
@@ -18,14 +26,26 @@
               <input type="text" class="form-control" id="eventDescription" placeholder="Enter a short description of your event">
             </div>
             <div class="form-group">
-              <label for="eventLocation">Location</label>
+              <label for="eventLocation">Location*</label>
               <input type="text" class="form-control" id="eventLocation" placeholder="E.g. Physical Science Building">
             </div>
             <div class="form-group">
-              <label for="eventTime">Date and Time</label>
-              <input type="datetime-local" id="eventTime">
+              <label for="eventTime">Date*</label>
+              <input type="date" id="eventDate" value="{{today}}">
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <div class="form-group">
+              <label for="eventTime">Start Time</label>
+              <input type="time" id="eventStartTime">
+            </div>
+            <div class="form-group">
+              <label for="eventTime">End Time</label>
+              <input type="time" id="eventEndTime">
+            </div>
+            <button type="submit" id="event-submit" class="btn btn-default">Submit</button>
+            <div style="display:none;">
+              <label for="eventId">Event Id</label>
+              <input type="text" id="eventId">
+            </div>
           </form>
         </div>
       </div>
