--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -30,9 +30,9 @@
                               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{_id}}" aria-expanded="false" aria-controls="#{{_id}}">
                                 <span class="eventTitle">{{name}}</span>
                                 {{#if sameDay date}}
-                                  <span class="badge" style="float:right">{{getTimeToEvent startTime}} {{pluralize startTime}}</span>
+                                  <span class="badge" style="float:right">In {{getTimeToEvent startTime}} {{pluralize startTime}}</span>
                                 {{else}}
-                                  <span class="badge" style="float:right">1+ Days</span>
+                                  <span class="badge" style="float:right">In 1+ Days</span>
                                 {{/if}}
                               </a>
                             </h4>
