Fixed accordion bug, removed ID from panel heading, is that a problem?

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -24,7 +24,7 @@
 
                       {{#if notAlreadyHappened this}}
                         <div class="panel panel-default {{mine _id}}" id="event-container">
-                          <div class="panel-heading" role="tab" id="{{_id}}">
+                          <div class="panel-heading" role="tab">
                             <h4 class="panel-title">
                               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{_id}}" aria-expanded="false" aria-controls="#{{_id}}">
                                 <span class="eventTitle">{{name}}</span>
