--- a/client/templates/eventForm.html
+++ b/client/templates/eventForm.html
@@ -16,14 +16,14 @@
             </div>
           </div>
           <form class="add-event">
-          
+
             <div class="form-group">
               <label for="eventName">Event Name*</label>
               <input type="text" class="form-control" id="eventName" placeholder="E.g. Big Red Hacks">
             </div>
             <div class="form-group">
               <label for="eventDescription">Event Description</label>
-              <input type="text" class="form-control" id="eventDescription" placeholder="Enter a short description of your event">
+              <textarea class="form-control" id="eventDescription" placeholder="Enter a short description of your event"></textarea>
             </div>
             <div class="form-group">
               <label for="eventLocation">Location*</label>
