Improve login UI

--- a/client/css/home.scss
+++ b/client/css/home.scss
@@ -8,7 +8,9 @@
       text-decoration: none;
     }
   }
+  background-color: white;
 }
+
 
 #map {
   height: 70vh;
@@ -18,7 +20,8 @@
 }
 
 .intro-header {
-  background: url(http://lorempixel.com/1920/1920/city/1) no-repeat center center;
+  background: url(https://upload.wikimedia.org/wikipedia/commons/4/40/Cornell_University_arts_quad.JPG) no-repeat center center;
+  background-size: 100% 100%;
 }
 
 .topnav {
