--- a/client/css/login.scss
+++ b/client/css/login.scss
@@ -1,1 +1,15 @@
 div#login-failure {position:absolute;width:100%;}
+h1{
+	color: black;
+   -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+   -webkit-text-stroke-width: 1px;
+   -webkit-text-stroke-color: black;
+}
+
+h3{
+	color: black;
+   -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+   -webkit-text-stroke-width: 1px;
+   -webkit-text-stroke-color: black;
+   font-style: italic;
+}
