--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -3,7 +3,7 @@
   <footer>
       <div class="container">
           <div class="row">
-              <div class="col-lg-12">
+              <div class="col-lg-10">
                   <ul class="list-inline">
                       <li>
                           <a href="/">Home</a>
@@ -13,10 +13,15 @@
                           <a href="/contact">Contact</a>
                       </li>
                   </ul>
+                  <em>"I would found an app where any person can find an event at any time."
+                  <br>
+                  &nbsp;&nbsp;- Para. Ezra Cornell</em>
                   <p class="copyright text-muted small">Made at BigRed//Hacks 2015</p>
               </div>
+              <div class="col-lg-2">
+                <img src="assets/cornell_logo.gif" width="128" height="128">
+              </div>
           </div>
-          <img src="assets/cornell_logo.gif" width="128" height="128" align="right">
       </div>
   </footer>
 </template>
