--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -3,7 +3,7 @@
   <a name="about"></a>
   <div class="intro-header">
       <div class="container">
-        
+
 
           <div class="row">
               <div class="col-lg-12">
@@ -17,8 +17,8 @@
                 </div>
 
                   <div class="intro-message">
-                      <h1>CU Later</h1>
-                      <h3>We'll CU... later.</h3>
+                      <h1>CU Soon</h1>
+                      <h3>The best way to find out what's going on at Cornell.</h3>
                       <hr class="intro-divider">
                       <ul class="list-inline intro-social-buttons">
                           <li>
