--- a/client/css/home.scss
+++ b/client/css/home.scss
@@ -1,5 +1,6 @@
 .content-section-a {
   margin-top: 40px;
+  padding-bottom: 100px;
   padding-top: 80px;
   .list-group-item a {
     color: black;
