--- a/client/templates/eventForm.html
+++ b/client/templates/eventForm.html
@@ -34,11 +34,11 @@
               <input type="date" id="eventDate" value="{{today}}">
             </div>
             <div class="form-group">
-              <label for="eventTime">Start Time</label>
+              <label for="eventTime">Start Time*</label>
               <input type="time" id="eventStartTime">
             </div>
             <div class="form-group">
-              <label for="eventTime">End Time</label>
+              <label for="eventTime">End Time*</label>
               <input type="time" id="eventEndTime">
             </div>
             <button type="submit" id="event-submit" class="btn btn-default">Submit</button>
