--- a/client/templates/eventForm.html
+++ b/client/templates/eventForm.html
@@ -27,7 +27,11 @@
             </div>
             <div class="form-group">
               <label for="eventLocation">Location*</label>
-              <input type="text" class="form-control" id="eventLocation" placeholder="E.g. Physical Science Building">
+              <select id="eventLocation" class="form-control">
+                {{#each locationNames}}
+                  <option value="{{this}}">{{this}}</option>
+                {{/each}}
+              </select>
             </div>
             <div class="form-group">
               <label for="eventTime">Date*</label>
