--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,13 +1,14 @@
 <template name='home'>
   {{> nav}}
+  <link href='https://fonts.googleapis.com/css?family=Sansita+One' rel='stylesheet' type='text/css'>
     <!-- Page Content -->
 	<a  name="services"></a>
     <div class="content-section-a">
         <div class="container">
             <div class="row">
 
-              <div class="">
-
+              <div class="slogan">
+                <!-- Bringing CORNELL together -->
               </div>
 
                 <div class="col-lg-8 col-sm-12">
