--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -12,7 +12,8 @@
                     <div class="alert alert-dismissable alert-danger">
                     <button type="button" class="close" data-dismiss="alert">&times;</button>
                     <h4>Error!</h4>
-                    <p>Please use a valid email address in the form of [netid]@cornell.edu!.</p>
+                    <p>CU SOON is only available for the Cornell community for now.<br>
+                      Use your Cornell e-mail (netId@cornell.edu), please. </p>
                   </div>
                 </div>
 
