--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -11,7 +11,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand topnav" href="#">CU Soon</a>
+              <a class="navbar-brand topnav" href="#">CU SOON -- Bringing CORNELL together</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
