--- a/client/css/home.scss
+++ b/client/css/home.scss
@@ -20,10 +20,10 @@
   margin-bottom: 10px;
 }
 
-.intro-header {
-  background: url(https://upload.wikimedia.org/wikipedia/commons/4/40/Cornell_University_arts_quad.JPG) no-repeat center center;
-  background-size: 100% 100%;
-}
+// .intro-header {
+//   background: url(https://upload.wikimedia.org/wikipedia/commons/4/40/Cornell_University_arts_quad.JPG) no-repeat center center;
+//   background-size: 100% 100%;
+// }
 
 .topnav {
     font-size: 14px;
@@ -63,3 +63,9 @@
   padding: 20px 25px;
   font-family: 'Sansita One', cursive;
 }
+
+
+
+
+
+
