--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -3,7 +3,12 @@
   <a name="about"></a>
   <div class="intro-header">
       <div class="container">
-
+        
+        <div class="fullscreen-bg">
+          <video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
+            <source src="assets/movie2.mp4" type="video/mp4">
+          </video>
+        </div>
 
           <div class="row">
               <div class="col-lg-12">
@@ -23,7 +28,7 @@
                       <hr class="intro-divider">
                       <ul class="list-inline intro-social-buttons">
                           <li>
-                              <a href="" id="login" class="btn btn-default btn-lg"><span class="network-name">Login</span></a>
+                              <a href="" id="login" class="btn btn-default btn-lg round"><span class="network-name">Login</span></a>
                           </li>
                       </ul>
                   </div>
