Add logo to nav bar and login page

--- a/client/css/nav.scss
+++ b/client/css/nav.scss
@@ -1,1 +1,14 @@
 div#login-failure {text-align:center;display:none;}
+
+
+div#parent {
+	overflow: hidden;
+}
+.right {
+	float: right;
+	width: 700px;
+	padding-left: 50px;
+}
+.left {
+	overflow: hidden;
+}
