--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -23,8 +23,8 @@
                 </div>
 
                   <div class="intro-message">
-                      <h1>CU Soon</h1>
-                      <h3>The best way to find out what's going on at Cornell.</h3>
+                      <h1><img src="assets/second_logo.png" width="600"></h1>
+                      <h3>The best way to find out what's going on at Cornell</h3>
                       <hr class="intro-divider">
                       <ul class="list-inline intro-social-buttons">
                           <li>
