--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -11,7 +11,14 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand topnav" href="#">CU SOON -- Bringing CORNELL together</a>
+
+              <div id="parent">
+                <a class="navbar-brand topnav" href="#">
+                <div class="right">Bringing CORNELL together</div>
+                <div class="left"><img src="assets/second_logo.png" width="100"></div></a>
+              </div>
+
+              
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
