Change background for main page

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -42,7 +42,7 @@
                   <ul class="dropdown-menu">
                     <li>
                       <div class="filter-partition" id="which-events">
-                        <p class="filter-header">Which Events</p>
+                        <p class="filter-header">Which Events?</p>
                         <div>
                           <label>
                             <input class="filter-field checkbox" id="all" type="checkbox" checked> All events
@@ -106,7 +106,7 @@
 
 
 
-                  <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" style="overflow:scroll; height:400px;">
+                  <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" style="overflow:scroll; height:500px;">
 
                     {{#each events}}
 
