--- a/client/css/home.scss
+++ b/client/css/home.scss
@@ -10,8 +10,11 @@
     }
   }
   background-color: white;
-}
+  background: linear-gradient(to bottom, rgba(255,255,255,0.40) 0%,rgba(255,255,255,0.3) 100%),
+              url(http://i.imgur.com/s8dy5qX.jpg) no-repeat center center;
+  background-size: 100% 100%;
 
+}
 
 #map {
   height: 70vh;
