Change nav slogan font

--- a/client/css/nav.scss
+++ b/client/css/nav.scss
@@ -8,6 +8,8 @@ div#parent {
 	float: right;
 	width: 700px;
 	padding-left: 50px;
+	font-family: 'Sansita One', cursive;
+	font-size: 30px;
 }
 .left {
 	overflow: hidden;
