--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -2,6 +2,7 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+    <link href='https://fonts.googleapis.com/css?family=Sansita+One' rel='stylesheet' type='text/css'>
       <div class="container topnav">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
@@ -18,7 +19,7 @@
                 <div class="left"><img src="assets/second_logo.png" width="100"></div></a>
               </div>
 
-              
+
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
